syntax = "proto3";
option csharp_namespace = "CecoChat.Contracts.User";
package CecoChat.Contracts.User;
import "User/ProfileFull.proto";
import "User/ProfilePublic.proto";

service ProfileQuery {
  rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse);
  rpc GetFullProfile(GetFullProfileRequest) returns (GetFullProfileResponse);
  rpc GetPublicProfile(GetPublicProfileRequest) returns (GetPublicProfileResponse);
  rpc GetPublicProfiles(GetPublicProfilesRequest) returns (GetPublicProfilesResponse);
}

message AuthenticateRequest {
  string user_name = 1;
  string password = 2;
}

message AuthenticateResponse {
  bool missing = 1;
  bool invalid_password = 2;
  ProfileFull profile = 3;
}

message GetFullProfileRequest {
}

message GetFullProfileResponse {
  ProfileFull profile = 1;
}

message GetPublicProfileRequest {
  int64 user_id = 1;
}

message GetPublicProfileResponse {
  ProfilePublic profile = 1;
}

message GetPublicProfilesRequest {
  repeated int64 user_ids = 1;
}

message GetPublicProfilesResponse {
  repeated ProfilePublic profiles = 1;
}
